@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Dancer
-version:            1.2002
+version:            1.2002_01
 abstract:           A minimal-effort oriented web application framework
 author:  []
 license:            perl
