@@ -1,3 +1,10 @@
+Dancer 1.2002_01
+    [ Joel Roth ]
+    * Code fixes in documentation (Dancer::Session, Dancer::Introduction).
+
+    [ Franck Cuny ]
+    * Fix test failures on old machines with Test::More without done_testing.
+
 Dancer 1.2002
     * Productionized! :)
 
